added links from react-router-dom and changed class attribute to className, finally swaped start for flex-start in scss styles

--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -1,4 +1,5 @@
 @import '../../styles/config';
+@import '../../styles/responsive';
 
 .header-home{
  position: relative;
@@ -29,7 +30,7 @@
  width: 100%;
  height: 100%;
  top: 0%;
- justify-content: start;
+ justify-content: flex-start;
  // background-color: $primary-color;
  z-index: 2;
 }
