--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Italiana&family=Karla:wght@400;700&display=swap");
 
+
+
 $primary-color: rgba(19, 19, 19, 1);
 $body-color: rgba(255, 255, 255, 1);
 $accent-color1: #e9da4d;
@@ -89,75 +91,75 @@ $font-weights: (
 
 // Media Queries
 
-// @mixin iPhone-4 {
-//   @media screen and (min-width: 320px) {
-//     @content;
-//   }
-// }
+@mixin iPhone-4 {
+  @media screen and (min-width: 320px) {
+    @content;
+  }
+}
 
-// @mixin Galaxy-Note-2 {
-//   @media screen and (max-height: 640px) and (min-width: 360px) {
-//     @content;
-//   }
-// }
+@mixin Galaxy-Note-2 {
+  @media screen and (max-height: 640px) and (min-width: 360px) {
+    @content;
+  }
+}
 
-// @mixin iPhone-x {
-//   @media screen and (min-width: 375px) and (max-height: 812px) {
-//     @content;
-//   }
-// }
+@mixin iPhone-x {
+  @media screen and (min-width: 375px) and (max-height: 812px) {
+    @content;
+  }
+}
 
 
-// @mixin Nexus-4 {
-//   @media screen and (min-width: 384px) and (max-height: 640px) {
-//     @content;
-//   }
-// }
+@mixin Nexus-4 {
+  @media screen and (min-width: 384px) and (max-height: 640px) {
+    @content;
+  }
+}
 
-// @mixin Pixel-2-XL {
-//   @media screen and (min-width: 411px) and (max-height: 823px) {
-//     @content;
-//   }
-// }
+@mixin Pixel-2-XL {
+  @media screen and (min-width: 411px) and (max-height: 823px) {
+    @content;
+  }
+}
 
-// @mixin iPhone-6-7-8 {
-//   @media screen and (min-width: 414px) and (max-height: 736px) {
-//     @content;
-//   }
-// }
+@mixin iPhone-6-7-8 {
+  @media screen and (min-width: 414px) and (max-height: 736px) {
+    @content;
+  }
+}
 
-// @mixin laptop-MDPI {
-//   @media screen and (min-width: 1280px) and(max-height: 800px) {
-//     @content;
-//   }
-// }
+@mixin laptop-MDPI {
+  @media screen and (min-width: 1280px) and(max-height: 800px) {
+    @content;
+  }
+}
 
-// @mixin laptop-N {
-//   @media screen and (min-width: 1280px) and(max-height: 950px) {
-//     @content;
-//   }
-// }
+@mixin laptop-N {
+  @media screen and (min-width: 1280px) and(max-height: 950px) {
+    @content;
+  }
+}
 
-// @mixin laptop-HIDPI {
-//   @media screen and (min-width: 1440px) and(max-height: 900px) {
-//     @content;
-//   }
-// }
+@mixin laptop-HIDPI {
+  @media screen and (min-width: 1440px) and(max-height: 900px) {
+    @content;
+  }
+}
 
-// @mixin media-md {
-//   @media screen and (min-width: 768px) {
-//     @content;
-//   }
-// }
+@mixin media-md {
+  @media screen and (min-width: 768px) {
+    @content;
+  }
+}
 
-// @mixin media-lg {
-//   @media screen and (min-width: 1024px) {
-//     @content;
-//   }
-// }
+@mixin media-lg {
+  @media screen and (min-width: 1024px) {
+    @content;
+  }
+}
 
-// @mixin media-xl {
-//   @media screen and (min-width: 1600px) {
-//     @content;
-//   }
-// }
+@mixin media-xl {
+  @media screen and (min-width: 1600px) {
+    @content;
+  }
+}
