--- a/src/components/call-to-action/call-to-action.scss
+++ b/src/components/call-to-action/call-to-action.scss
@@ -4,7 +4,8 @@
 .contact{
   position: relative;
   width: 100%;
-  height: 78rem;
+  height: 90rem;
+  // overflow-y: hidden;
 
   &-content{
     position: relative;
@@ -13,6 +14,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    height: 100%;
+    overflow-y: hidden;
 
     h2{
       font-family: 'Karla', sans-serif;
@@ -27,6 +30,7 @@
       flex-wrap: wrap;
       justify-content: center;
       margin: 37px 0;
+      overflow: hidden;
 
       .contact1, .contact2, .contact3{
         margin: 20px 0;
