--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,5 +1,5 @@
 @import '../../styles/config';
-@import '../../styles/responsive';
+
 
 #footer{
   display: flex;
@@ -15,5 +15,6 @@
   h4{
     margin: 0 auto;
     font-size: 1rem;
+    padding: 5px 0;
   }
 }
