--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,24 +1,24 @@
 @import '../../styles/config';
-@import '../../styles/responsive';
+
 
 .intro{
  width: 100%;
  background-color: $body-color;
 
  &_text{
-  display: flex;
-  flex-flow: column wrap;
-  align-items: center;
-  width: 100%;
-  margin: 50px auto;
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  margin: 20px auto;
   text-align: center;
 
   h2{
-   width: 395px;
+   font-size: 1.25rem;
+   line-height: 1.5;
    font-family: 'Karla', sans-serif;
-   margin-bottom: 50px;
+   // margin-bottom: 10px;
+   padding: 0 10px;
   }
 
-  p{width: 399px;}
+  p{padding: 0 10px;}
  }
 }
