added services section

--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -1,16 +1,27 @@
 @import '../../styles/config';
-@import '../../styles/responsive';
+
 
 .services-intro{
- display: flex;
- flex-flow: column wrap;
+ display: grid;
+ grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
  align-items: center;
  justify-content: space-evenly;
- width: 100%;
+ // width: 100%;
  height: 40rem;
  background-color: $body-color;
  text-align: center;
  
+ a{
+  color: $primary-color;
+  text-decoration: none;
+
+&:hover{
+    text-decoration: none;
+    color: $accent-texticon2;
+
+ }
+}
+
 
  &_text1{
   position: relative;
@@ -40,8 +51,14 @@
  }
 
  &::after{
-  @include borderLine(-40%, 1.98px, 140px, 0, 0, 0);
+  @include borderLine(-40%, 1.35px, 140px, 0, 0, 0);
  }
+ }
+
+ &-cnt{
+  display: grid;
+  justify-self: center;
+  align-self: center;
  }
 
  &_content{
@@ -72,4 +89,90 @@
  }
 
  }
+}
+
+// Responsiveness
+
+@include tab-sm{
+ .services-intro{
+ display: grid;
+ grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+ align-items: center;
+ // justify-content: space-evenly;
+ height: 20rem;
+
+ h2{
+  font-size: 1.2rem;
+ }
+
+ h1{
+  font-size: 1.7rem;
+ }
+
+ &_text1{
+  position: relative;
+ font-family: 'Karla', sans-serif;
+ font-weight: weight(bold);
+ height: 130px;
+ transform: rotate(270deg);
+
+ &::after{
+  @include borderLine(40%, 1.35px, 50px, 0, 0, 0);
+ }
+ }
+
+ &_text2{
+ display: flex;
+ flex-direction: column;
+ justify-content: space-evenly;
+ align-items: center;
+ position: relative;
+ font-family: 'Karla', sans-serif;
+ font-weight: weight(bold);
+ height: 190px;
+ transform: rotate(270deg);
+ 
+ 
+ h2{
+  transform: scale(-1, -1);
+  margin: 100px 0 0 0;
+ }
+
+ &::after{
+  @include borderLine(20%, 1.35px, 50px, 0, 0, 0);
+ }
+ }
+
+
+ &_content{
+  position: relative;
+  padding: 0.5rem 0;
+  width: 200px;
+
+ h1{
+
+ &:hover{
+  font-size: 1.8rem;
+  @include transition-ease;
+  }
+}
+ 
+ .link1{
+ &::after{
+  @include coloredBorders(190px, 14px, 55%, 2.5%, $border-color1);
+ }
+ }
+ .link2::after{
+  @include coloredBorders(170px, 14px, 55%, 7.5%, $border-color2);
+ }
+ .link3::after{
+  @include coloredBorders(160px, 14px, 55%, 10.5%, $border-color3);
+ }
+
+ }
+
+ }
+
+
+ 
 }
