--- a/src/components/contactLinks/contactLinks.scss
+++ b/src/components/contactLinks/contactLinks.scss
@@ -1,16 +1,16 @@
-@import '../../styles/config';
+@import "../../styles/config";
 
-.links{
+.links {
   position: relative;
   width: 100%;
-  height: 58rem;
+  height: 45rem;
   background-color: $accent-color2;
 
-  &-container{
+  &-container {
     position: relative;
     width: 100%;
 
-    .links-content{
+    .links-content {
       position: relative;
       display: flex;
       flex-direction: column;
@@ -21,78 +21,72 @@
       padding: 20px 0 0 0;
       overflow: hidden;
 
-      .border-line1{
-        @include borderLine(15.9%, 1.98px, 400px, 0, 0, 90deg);
+      .border-line1 {
+        @include borderLine(5.9%, 1.98px, 400px, 0, 0, 90deg);
       }
 
-      .border-line2{
-        @include borderLine(43.5%, 1.98px, 400px, 0, 0, 90deg);
+      .border-line2 {
+        @include borderLine(37.5%, 1.98px, 400px, 0, 0, 90deg);
       }
 
-      a{
-       color: $primary-color;
-       &:hover{
-        color: navy;
-       }
+      a {
+        color: $primary-color;
+        &:hover {
+          color: navy;
+        }
       }
 
-
-      .links1{
+      .links1 {
         position: relative;
         margin: 20px 0;
 
-        p{
+        p {
           margin: 10px 0;
           width: 270px;
         }
 
-        h3{
-        padding: 20px;
+        h3 {
+          padding: 20px;
         }
-        .color-border3{
+        .color-border3 {
           position: relative;
-          
 
-          &::before{
-            @include coloredBorders(230px, 8px, 130%, -5.5%, $border-color3);
+          &::before {
+            @include coloredBorders(155px, 8px, 130%, -5.5%, $border-color3);
           }
         }
-        
       }
 
-      .links2{
+      .links2 {
         margin: 60px 0 20px 0;
 
-        h3{
-          font-family: 'Karla', sans-serif;
+        h3 {
+          font-family: "Karla", sans-serif;
           font-weight: weight(bolder);
           width: 250px;
           margin: 20px 0;
         }
-        .social-icons{
-        #icons{
-          font-size: 1.5rem;
-          color: $menu-text;
-          margin: 0 10px;
-          cursor: pointer;
-        }
-       }
-      }
-   
-
-      .links3{
-        margin: 30px 0 0 0;
-        
-        #title{
-            font-weight: bolder;
+        .social-icons {
+          #icons {
+            font-size: 1.5rem;
+            color: $menu-text;
+            margin: 0 10px;
+            cursor: pointer;
           }
-        
-        h3{
+        }
+      }
+
+      .links3 {
+        margin: 30px 0 0 0;
+
+        #title {
+          font-weight: bolder;
+        }
+
+        h3 {
           margin: 20px 0;
           font-weight: weight(bold);
-          font-family: 'Karla', sans-serif;
-
-          
+          font-family: "Karla", sans-serif;
         }
       }
     }
@@ -100,83 +94,77 @@
 
   // CONTACT PAGE
 
-  &.contactP{
+  &.contactP {
     background-color: $quiz-color;
   }
 }
 
-
 // RESPONSIVENESS
 
+@include tab-sm {
+  .links {
+    height: 47.2vw;
 
-@include tab-sm{
- .links{
-  height: 47.2vw;
+    &-container {
+      .links-content {
+        position: relative;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
 
-  &-container{
-
-    .links-content{
-      position: relative;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
-      
-
-      .border-line1{
-       left:32%;
-        @include borderLine(10.5%, 1.98px, 400px, 0, 0, 180deg);
-      }
-
-      .border-line2{
-       left: 70%;
-        @include borderLine(10.5%, 1.98px, 400px, 0, 0, 180deg);
-      }
-
-      h1{
-       font-size: 3.5vw;
-      }
-      h3{
-        font-size: 2.5vw;
-      }
-      p{
-        font-size: 1.5vw;
-      }
-
-      .links1{
-        order: 0;
-        justify-self: center;
-       
-        p{
-          margin: 10% 0 2% 14%;
-          text-align: justify;
-          width: 76%;
-          justify-self: end;
+        .border-line1 {
+          left: 32%;
+          @include borderLine(10.5%, 1.98px, 400px, 0, 0, 180deg);
         }
 
-        .color-border3{
-          position: relative;
-          
+        .border-line2 {
+          left: 70%;
+          @include borderLine(10.5%, 1.98px, 400px, 0, 0, 180deg);
+        }
 
-          &::before{
-            @include coloredBorders(20vw, 8px, 130%, -5.5%, $border-color3);
+        h1 {
+          font-size: 3.5vw;
+        }
+        h3 {
+          font-size: 2.5vw;
+        }
+        p {
+          font-size: 1.5vw;
+        }
+
+        .links1 {
+          order: 0;
+          justify-self: center;
+
+          p {
+            margin: 10% 0 2% 14%;
+            text-align: justify;
+            width: 76%;
+            justify-self: end;
+          }
+
+          .color-border3 {
+            position: relative;
+
+            &::before {
+              @include coloredBorders(20vw, 8px, 130%, -5.5%, $border-color3);
+            }
           }
         }
-        
-      }
 
-      .links2{
-        order: 1;
-        justify-self: center;
-        margin: 0 10px;
-        h3{
-        font-size: 1.5vw;
-      }
-      }
+        .links2 {
+          order: 1;
+          justify-self: center;
+          margin: 0 10px;
+          h3 {
+            font-size: 1.5vw;
+          }
+        }
 
-      .links3{
-       order: 2;
-       justify-self: center;
+        .links3 {
+          order: 2;
+          justify-self: center;
+        }
       }
-     }
     }
-   }
+  }
 }
