--- a/src/components/testimonies/carousel/carousell.scss
+++ b/src/components/testimonies/carousel/carousell.scss
@@ -1,5 +1,4 @@
-@import '../../../styles/config';
-
+@import "../../../styles/config";
 
 .slides {
   position: relative;
@@ -13,7 +12,7 @@
     height: 100%;
     width: 100%;
 
-    &.slideInactive{
+    &.slideInactive {
       display: none;
     }
   }
@@ -26,7 +25,6 @@
     position: absolute;
     font-size: 5rem;
     width: 5rem;
-    height: 5rem;
     top: 60%;
     @include transition-ease;
     opacity: 0.7;
@@ -51,47 +49,44 @@
   }
 }
 
-
 .slideContent {
   width: 90vw;
   height: 100%;
   display: grid;
   align-content: center;
 
-  & > #slideTitle{
+  & > #slideTitle {
     margin-bottom: 30px;
   }
 }
 
-.slideContentInner{
+.slideContentInner {
   text-shadow: none;
 
-  & > .slideTitle{
+  & > .slideTitle {
     overflow: hidden;
   }
 }
 
-  .cb1{
+.cb1 {
   position: relative;
-  
-  &::after{
-    @include coloredBorders(170px, 15px, 64%, 0, $border-color1);
-  }
-}
-.cb2{
-  position: relative;
-  
-  &::after{
-    @include coloredBorders(194px, 15px, 64%, 0, $border-color2);
-  }
-}
 
-.cb3{
+  &::after {
+    @include coloredBorders(100px, 15px, 64%, 0, $border-color1);
+  }
+}
+.cb2 {
   position: relative;
-  
-  &::after{
-    @include coloredBorders(199px, 15px, 64%, 0, $border-color3);
+
+  &::after {
+    @include coloredBorders(115px, 15px, 64%, 0, $border-color2);
   }
 }
 
+.cb3 {
+  position: relative;
 
+  &::after {
+    @include coloredBorders(115px, 15px, 64%, 0, $border-color3);
+  }
+}
