added new header image

--- a/src/components/banner/banner_content.scss
+++ b/src/components/banner/banner_content.scss
@@ -1,205 +1,216 @@
-@import '../../styles/config';
+@import "../../styles/config";
 
-#aboutP{
+#aboutP {
   height: 100%;
   width: 100%;
   display: grid;
   align-items: center;
   justify-content: center;
-  grid-template-rows: 80px .9fr;
+  grid-template-rows: 80px 0.9fr;
 }
 
-#servicesP{
+#servicesP {
   display: grid;
   justify-content: center;
-  grid-template-areas: 'Banner Banner'
-  'b1 b1'
-  'b2 b2';
+  grid-template-areas:
+    "Banner Banner"
+    "b1 b1"
+    "b2 b2";
   width: 100%;
   height: 100%;
-  #servicesP-b0{
+  #servicesP-b0 {
     font-size: 7vmin;
     justify-self: center;
-    padding: 0 4vmin 5vmin ;
+    padding: 0 4vmin 5vmin;
     grid-area: Banner;
 
-    &::after{
+    &::after {
       left: 50%;
-     @include borderLine(48vmax, 1.98px, 12vmax, 0, 0, 180deg);
+      @include borderLine(48vmax, 1.98px, 12vmax, 0, 0, 180deg);
     }
   }
-  #servicesP-b1, #servicesP-b2{
+  #servicesP-b1,
+  #servicesP-b2 {
     font-size: 4.9vmin;
     font-family: Italiana;
     text-align: justify;
-    padding: 0 3vmin 1vmin ;
+    padding: 0 3vmin 1vmin;
     // height: 60vmin;
   }
 
-  #servicesP-b2{
+  #servicesP-b2 {
     position: relative;
     top: -5%;
     grid-area: b2;
   }
-  #servicesP-b1{
+  #servicesP-b1 {
     grid-area: b1;
   }
 }
-.banner{
- display: grid;
- grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
- height: 100%;
- width: auto;
- overflow: hidden;
-
- &-image{
-  position: relative;
-  background: url('../../Assets/header-img-3.jpeg') no-repeat; 
-  background-size: 100% auto;
-   width: 100%;
-   height: 100%;
-   max-width: 350px;
-   min-width: 250px;
-   min-height: 350px;
- }
-
- & > *{
-  color: black;
-  padding: 1rem;
- }
-
- &-text > h1{
-  font-size: 2.2rem;
-  padding-bottom: 1rem;
- }
- &-text > h3{
-  font-size: 1rem;
-  padding-bottom: 1rem;
- }
-
- &-text > h1, h3{
+.banner {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+  height: 100%;
+  width: auto;
   overflow: hidden;
- }
 
- #banner-btn{
-  @include btn;
-  margin: .5rem;
-
-  &:hover{
-   @include btnHover;
+  &-image {
+    position: relative;
+    background: url("../../Assets/20201114_115411.jpg") no-repeat;
+    background-size: 100% auto;
+    width: 100%;
+    height: 100%;
+    max-width: 350px;
+    min-width: 250px;
+    min-height: 350px;
   }
- }
-}
 
+  & > * {
+    color: black;
+    padding: 1rem;
+  }
+
+  &-text > h1 {
+    font-size: 2.2rem;
+    padding-bottom: 1rem;
+  }
+  &-text > h3 {
+    font-size: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  &-text > h1,
+  h3 {
+    overflow: hidden;
+  }
+
+  #banner-btn {
+    @include btn;
+    margin: 0.5rem;
+
+    &:hover {
+      @include btnHover;
+    }
+  }
+}
 
 // Responsive Layouts
 
-
-@include phone-md{
-  .banner{
-    #banner-btn{
-    width: 275px;
-    height: 50px;
-
-  }}
-}
-
-@include phone-xlg{
-.banner{
- display: grid;
- grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
- align-items: center;
- overflow: hidden;
- 
- &-image{
-   max-width: 450px;
-  }
- }
-
-}
-
-@include tab-sm{
-
- .banner-wrapper{
-  height: 25rem;
-  background: linear-gradient(to bottom, $accent-color1 0%, $accent-color1 60%, $body-color 60%, $body-color 100%);
- }
-
-.banner{
- display: grid;
- grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
- align-items: center;
- overflow: hidden;
- 
- &-image{
-   margin-top: 40px;
-   max-width: 260px;
-  }
-
-  &-text{
-  margin-left: 30px;
-
-  }
-
-  &-text > h1{
-  font-size: 2rem;
-  padding-bottom: 1rem;
-  font-family: Italiana;
- }
- &-text > h3{
-  font-size: 0.8rem;
-  padding-bottom: 1rem;
- }
-
- #banner-btn{
-  @include btn;
-  width: 162px;
- }
-}
-
-// RESPONSIVE SERVICES PAGE
-.banner-wrapper.servicesP{
-  height: 160vmax;
-  background: linear-gradient(to bottom, $accent-color1 0%, $accent-color1 18%, $body-color 18%, $body-color 100%);
-
-#servicesP{
-  display: grid;
-  justify-content: center;
-  grid-template-areas: 'Banner Banner'
-  'b1 b2';
-  // width: 100%;
-  // height: 100%;
-  #servicesP-b0{
-    font-size: 7vmin;
-    justify-self: center;
-    padding: 0 4vmin 5vmin ;
-    grid-area: Banner;
-
-    &::after{
-      left: 50%;
-     @include borderLine(58vmin, 1.98px, 122vmin, 0, 0, 180deg);
+@include phone-md {
+  .banner {
+    #banner-btn {
+      width: 275px;
+      height: 50px;
     }
   }
-  #servicesP-b1, #servicesP-b2{
-    font-size: 3.9vmin;
-    font-family: Italiana;
-    text-align: justify;
-    padding: 0 1vmin 0 ;
-  }
+}
 
-  #servicesP-b2{
-    grid-area: b2;
-    position: relative;
-    top: -15%;
-    padding: 0 0 0 4vmin ;
-  }
-  #servicesP-b1{
-    grid-area: b1;
-    position: relative;
-    top: -15%;
-    padding: 0 4vmin 0 0 ;
+@include phone-xlg {
+  .banner {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    align-items: center;
+    overflow: hidden;
+
+    &-image {
+      max-width: 450px;
+    }
   }
 }
 
-}
+@include tab-sm {
+  .banner-wrapper {
+    height: 25rem;
+    background: linear-gradient(
+      to bottom,
+      $accent-color1 0%,
+      $accent-color1 60%,
+      $body-color 60%,
+      $body-color 100%
+    );
+  }
+
+  .banner {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+    align-items: center;
+    overflow: hidden;
+
+    &-image {
+      margin-top: 40px;
+      max-width: 260px;
+    }
+
+    &-text {
+      margin-left: 30px;
+    }
+
+    &-text > h1 {
+      font-size: 2rem;
+      padding-bottom: 1rem;
+      font-family: Italiana;
+    }
+    &-text > h3 {
+      font-size: 0.8rem;
+      padding-bottom: 1rem;
+    }
+
+    #banner-btn {
+      @include btn;
+      width: 162px;
+    }
+  }
+
+  // RESPONSIVE SERVICES PAGE
+  .banner-wrapper.servicesP {
+    height: 160vmax;
+    background: linear-gradient(
+      to bottom,
+      $accent-color1 0%,
+      $accent-color1 18%,
+      $body-color 18%,
+      $body-color 100%
+    );
+
+    #servicesP {
+      display: grid;
+      justify-content: center;
+      grid-template-areas:
+        "Banner Banner"
+        "b1 b2";
+      // width: 100%;
+      // height: 100%;
+      #servicesP-b0 {
+        font-size: 7vmin;
+        justify-self: center;
+        padding: 0 4vmin 5vmin;
+        grid-area: Banner;
+
+        &::after {
+          left: 50%;
+          @include borderLine(58vmin, 1.98px, 122vmin, 0, 0, 180deg);
+        }
+      }
+      #servicesP-b1,
+      #servicesP-b2 {
+        font-size: 3.9vmin;
+        font-family: Italiana;
+        text-align: justify;
+        padding: 0 1vmin 0;
+      }
+
+      #servicesP-b2 {
+        grid-area: b2;
+        position: relative;
+        top: -15%;
+        padding: 0 0 0 4vmin;
+      }
+      #servicesP-b1 {
+        grid-area: b1;
+        position: relative;
+        top: -15%;
+        padding: 0 4vmin 0 0;
+      }
+    }
+  }
 }
