added new about image

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -11,7 +11,7 @@
 
   &-image {
     position: relative;
-    background: url("../../Assets/about-img.png") no-repeat;
+    background: url("../../Assets/20201114_123708.jpg") no-repeat;
     background-size: 100% auto;
     width: 260px;
     justify-self: center;
