added new quiz section image

--- a/src/components/quiz/quiz.scss
+++ b/src/components/quiz/quiz.scss
@@ -15,8 +15,8 @@
     width: 100%;
 
     .quiz-image {
-      background: url("../../Assets/person-holding-a-mirror-on-an-open-field-4412934.jpg")
-        no-repeat center center/cover;
+      background: url("../../Assets/20201114_114927.jpg") no-repeat top
+        center/cover;
       width: 88vw;
       height: 234px;
     }
@@ -99,8 +99,6 @@
       align-items: center;
 
       .quiz-image {
-        background: url("../../Assets/person-holding-a-mirror-on-an-open-field-4412934.jpg")
-          no-repeat center center/cover;
         width: 44vw;
         height: 190px;
         margin-left: 5.35vw;
