--- a/src/components/testimonies/carousel/carousell.scss
+++ b/src/components/testimonies/carousel/carousell.scss
@@ -57,6 +57,8 @@
 
   & > #slideTitle {
     margin-bottom: 30px;
+    font-size: var(--clamph2);
+    font-family: "karla";
   }
 }
 
@@ -65,6 +67,12 @@
 
   & > .slideTitle {
     overflow: hidden;
+    align-self: center;
+    font-size: var(--clamph0);
+  }
+  & > .slideDescription {
+    position: relative;
+    margin-top: 1.5rem;
   }
 }
 
@@ -72,14 +80,14 @@
   position: relative;
 
   &::after {
-    @include coloredBorders(100px, 15px, 64%, 0, $border-color1);
+    @include coloredBorders(130px, 15px, 64%, 0, $border-color1);
   }
 }
 .cb2 {
   position: relative;
 
   &::after {
-    @include coloredBorders(115px, 15px, 64%, 0, $border-color2);
+    @include coloredBorders(155px, 15px, 64%, 0, $border-color2);
   }
 }
 
@@ -87,6 +95,6 @@
   position: relative;
 
   &::after {
-    @include coloredBorders(115px, 15px, 64%, 0, $border-color3);
+    @include coloredBorders(150px, 15px, 64%, 0, $border-color3);
   }
 }
