--- a/src/components/banner/banner_content.scss
+++ b/src/components/banner/banner_content.scss
@@ -71,11 +71,9 @@
   }
 
   &-text > h1 {
-    font-size: 2.2rem;
     padding-bottom: 1rem;
   }
   &-text > h3 {
-    font-size: 1rem;
     padding-bottom: 1rem;
   }
 
@@ -146,12 +144,12 @@
     }
 
     &-text > h1 {
-      font-size: 2rem;
+      // font-size: 2rem;
       padding-bottom: 1rem;
       font-family: Italiana;
     }
     &-text > h3 {
-      font-size: 0.8rem;
+      // font-size: 0.8rem;
       padding-bottom: 1rem;
     }
 
