--- a/src/components/contactLinks/contactLinks.scss
+++ b/src/components/contactLinks/contactLinks.scss
@@ -103,7 +103,7 @@
 
 @include tab-sm {
   .links {
-    height: 47.2vw;
+    height: 17rem;
 
     &-container {
       .links-content {
@@ -146,7 +146,7 @@
             position: relative;
 
             &::before {
-              @include coloredBorders(20vw, 8px, 130%, -5.5%, $border-color3);
+              @include coloredBorders(20vw, 8px, 130%, -5.5%, $border-color2);
             }
           }
         }
@@ -166,5 +166,11 @@
         }
       }
     }
+  }
+}
+
+@include tab-lg {
+  .links {
+    height: 19rem;
   }
 }
