--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,24 +1,30 @@
-@import '../../styles/config';
+@import "../../styles/config";
 
+.intro {
+  width: 100%;
+  background-color: $body-color;
 
-.intro{
- width: 100%;
- background-color: $body-color;
+  &_text {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    margin: 5px auto 20px;
+    text-align: center;
 
- &_text{
-  display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  margin: 20px auto;
-  text-align: center;
+    h2 {
+      line-height: 1.5;
+      font-family: "Karla", sans-serif;
+      padding: 0 10px;
+    }
 
-  h2{
-   font-size: 1.25rem;
-   line-height: 1.5;
-   font-family: 'Karla', sans-serif;
-   // margin-bottom: 10px;
-   padding: 0 10px;
+    p {
+      padding: 0 10px;
+      margin-top: -2.5rem;
+    }
   }
+}
 
-  p{padding: 0 10px;}
- }
+@include tab-sm {
+  .intro_text > p {
+    margin-top: -0.8rem;
+  }
 }
