--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -11,14 +11,14 @@
     margin: 5px auto 20px;
     text-align: center;
 
-    h2 {
-      line-height: 1.5;
-      font-family: "Karla", sans-serif;
-      padding: 0 10px;
-    }
+    // p {
+    //   line-height: 1.5;
+    //   font-family: "Karla", sans-serif;
+    //   padding: 0 10px;
+    // }
 
     p {
-      padding: 0 10px 10px;
+      padding: 10px;
     }
   }
 }
