added links to contact links section

--- a/src/components/contactLinks/contactLinks.scss
+++ b/src/components/contactLinks/contactLinks.scss
@@ -87,6 +87,7 @@
           margin: 20px 0;
           font-weight: weight(bold);
           font-family: "Karla", sans-serif;
+          cursor: pointer;
         }
       }
     }
